--- a/OneDrive/Documents/NetBeansProjects/Top_Ink/nbproject/project.properties
+++ b/OneDrive/Documents/NetBeansProjects/Top_Ink/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Top_Ink
-application.vendor=walid
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -33,14 +32,11 @@ dist.jar=${dist.dir}/Top_Ink.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Top_Ink
-endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.1.4.jar=../AddComponents/libs/jcalendar-1.1.4.jar
-file.reference.mysql-connector-java-8.0.21.jar=../../../../Downloads/mysql-connector-java-8.0.21/mysql-connector-java-8.0.21/mysql-connector-java-8.0.21.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.21.jar}:\
     ${file.reference.jcalendar-1.1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
